--- a/pagerate.css
+++ b/pagerate.css
@@ -6,7 +6,7 @@ body {
   background: #E0E4CC;
   height: 50px;
   width: 100%;
-  padding: 25px;
+  padding: 25px 0 25px 0;
   -moz-box-shadow: 0 0 10px #999999;
   -webkit-box-shadow: 0 0 10px #999999;
   box-shadow: 0 0 10px #999999;
