--- a/pagerate.css
+++ b/pagerate.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  -webkit-font-smoothing: antialiased;
 }
 
 .hidden {
@@ -7,8 +8,8 @@ body {
 }
 
 .banner {
-  background: #E0E4CC;
-  height: 50px;
+  background: #69D2E7;
+  overflow: hidden;
   width: 100%;
   padding: 25px 0 25px 0;
   -moz-box-shadow: 0 0 10px #999999;
@@ -19,10 +20,11 @@ body {
 input[type='range'] {
   /* margin-top: 10px; */
   -webkit-appearance: none;
-  /* -webkit-border-radius: 5px; */
-  background-color: #69D2E7;
+  background-color: #2E9791;
   height: 30px;
   width: 100%;
+  border-radius: 4px;
+  box-shadow: 0 2px 0 rgba(0,0,0,0.2) inset;
   outline: none;
   -moz-outline: none;
 }
@@ -31,7 +33,8 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 25px;
   height: 40px;
-  background: #FA6900;
+  background: #41557B;
+  border-radius: 3px;
 }
 
 .slider {
@@ -41,6 +44,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .text {
+  color: #41557B;
   width: 15%;
   height: 50px;
   float: left;
